inject the name of the app in the data

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -11,7 +11,7 @@
 </head>
 
 <body style="margin: 0px;">
-  <h2>{{name}}</h2>
+  <div id="app" data-name="{{name}}">Loading...</div>
 </body>
 
 </html>
