--- a/client/index.scss
+++ b/client/index.scss
@@ -7,3 +7,37 @@ body {
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   margin: 0px;
 }
+
+.h-list * + * {
+  margin-left: 8px;
+}
+
+.v-list * + * {
+  margin-top: 8px;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-item-static {
+  flex: 0 1 auto;
+}
+
+.flex-item-dynamic {
+  flex: 1 1 auto;
+}
+
+.flex-item-expand {
+  flex: 1 0 auto;
+}
+
+.expand-to-fill-container {
+  height: 100%;
+}
